--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,10 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>sadjflñljsdafñasjfñljasdfljasñdjfladjsfdjsafñsajfdasdjflsjadfkjasfjasdjfañ
+                    todo este desmadre es para el branch master antes de fusionar con cabecera 
+                    con el comando merge
+                </p>
             </div>
         </div>
     </body>
