--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>BIENVENIDO A HYPERBLOG 2.0 CON SSH</title>
+        <title>BIENVENIDO A HYPERBLOG 2.0 with SSH</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
