--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,9 @@
                 </p>
                 <P>suscribete y dale like =D</P>
             </div>
+            <div id="footer">
+                Hecho con amor 
+            </div>
         </div>
     </body>
 </html>
